@@ -117,6 +117,8 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkImage.html">GtkImage</a>
 <tr><td class="wiki"> block-function-signals </td><td class="wiki"> Block signal emissions from functions </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.7.21 </td></tr>
 <tr><td class="wiki"> theme-icon-size </td><td class="wiki"> The size of the GTK theme icon </td><td class="wiki"> An integer &gt; <code>0</code> or <code>-1</code> to ignore </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> stock-icon-size </td><td class="wiki"> The size of the GTK stock icon </td><td class="wiki"> <code>0</code> to <code>6</code> (see <a href="http://developer.gnome.org/gtk/2.24/gtk-Themeable-Stock-Images.html#GtkIconSize">GtkIconSize</a>) </td><td class="wiki"> 0.8.1 </td></tr>
+<tr><td class="wiki"> auto-refresh </td><td class="wiki"> Auto-refresh images from files on change </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.8.1 </td></tr>
+<tr><td class="wiki"> rate-limit </td><td class="wiki"> The auto-refresh monitor limit in milliseconds </td><td class="wiki"> An integer &gt;= <code>10</code> </td><td class="wiki"> 0.8.1 </td></tr>
 </table>
 
 <h2> Directives </h2>
@@ -137,6 +139,8 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkImage.html">GtkImage</a>
 <h2> Signals </h2>
 
 <p>There is no default signal for this widget.</p>
+
+<p>The "<a href="http://developer.gnome.org/gio/2.32/GFileMonitor.html#GFileMonitor-changed">changed</a>" signal is emitted if auto-refresh is true and the image file being monitored has changed.</p>
 
 <p>The following GtkWidget signals are connected-up for all widgets:</p>
 <p>"<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-button-press-event">button-press-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-button-release-event">button-release-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-configure-event">configure-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-enter-notify-event">enter-notify-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-leave-notify-event">leave-notify-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-focus-in-event">focus-in-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-focus-out-event">focus-out-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-hide">hide</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-show">show</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-key-press-event">key-press-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-key-release-event">key-release-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-map-event">map-event</a>", "<a href="http://developer.gnome.org/gtk/2.24/GtkWidget.html#GtkWidget-unmap-event">unmap-event</a>"</p>
@@ -208,7 +212,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkImage.html">GtkImage</a>
 						<td>
 							<table width="100%" cellpadding="0px" cellspacing="0px">
 								<tr>
-									<td class="footer" width="33%" align="center">2012-09-13 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
+									<td class="footer" width="33%" align="center">2012-09-15 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://code.google.com/p/gtkdialog/">Project Page</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://www.murga-linux.com/puppy/viewtopic.php?t=69188">Development Thread</a></td>
 								</tr>
