@@ -1,6 +1,10 @@
 Please see NEWS for a summary of changes since the last release suitable
 for announcements.
 
+* Sat Sep 15 2012 Thunor <thunorsif@hotmail.com>
+- Added support for auto-refreshing of images from files on
+  G_FILE_MONITOR_EVENT_CHANGED to the pixmap widget.
+
 * Fri Sep 14 2012 Thunor <thunorsif@hotmail.com>
 - Added the "column-sort-function" tag attribute to the tree widget to
   support natural sorting algorithms on columns of type string.
